--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: iOS App Downloader (WARP Fixed)
+name: iOS App Downloader (WARP Final Fix)
 on: 
   workflow_dispatch:
 
@@ -8,23 +8,24 @@ jobs:
     timeout-minutes: 30
     container:
       image: ubuntu:22.04
-      # WARP 需要 privileged 权限
       options: --privileged --shm-size=2gb
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. 安装系统基础环境
+      # 1. 系统基础环境安装
       - name: Install System Tools
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          # 修复 policy-rc.d 阻止服务启动的问题
+          printf '#!/bin/sh\nexit 0' > /usr/sbin/policy-rc.d
+          
           apt-get update
           apt-get install -y curl wget git net-tools sudo debconf-utils vim zip unzip \
             software-properties-common lsb-release gnupg ca-certificates
           
-          # 准备 Mozilla PPA
           add-apt-repository -y ppa:mozillateam/ppa
           echo '
           Package: *
@@ -32,44 +33,37 @@ jobs:
           Pin-Priority: 1001
           ' | tee /etc/apt/preferences.d/mozilla-firefox
 
-      # 2. 安装 Cloudflare WARP (修复 TOS 报错)
+      # 2. 安装并启动 Cloudflare WARP (修复语法与启动报错)
       - name: Install & Configure WARP
         run: |
-          # 添加 Key 和 源
           curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
           echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list
           
           apt-get update
           apt-get install -y cloudflare-warp
           
-          # 后台启动 warp-svc
+          # 手动启动守护进程
           nohup warp-svc > /var/log/warp.log 2>&1 &
-          echo "Waiting for WARP service..."
-          sleep 5
+          echo "Waiting for warp-svc to warm up..."
+          sleep 10
           
-          # --- 修复点在这里 ---
-          # 显式接受 TOS
-          warp-cli registration new --accept-tos
+          # --- 语法修复点：--accept-tos 必须放在前面 ---
+          warp-cli --accept-tos registration new
           
-          # 设置为 Proxy 模式 (SOCKS5 端口 40000)
-          warp-cli mode proxy
-          warp-cli proxy port 40000
+          # 设置模式为 Proxy (SOCKS5 40000)
+          warp-cli --accept-tos mode proxy
+          warp-cli --accept-tos proxy port 40000
           
-          # 连接
-          warp-cli connect
+          # 建立连接
+          warp-cli --accept-tos connect
           
-          echo "Waiting for WARP connection..."
-          sleep 5
+          echo "Waiting for WARP connection to establish..."
+          sleep 10
           
           # 验证
-          echo "Testing WARP connectivity..."
-          # 通过代理访问检测接口，查看 warp=on 状态
-          if curl -x socks5://127.0.0.1:40000 -s --connect-timeout 5 https://www.cloudflare.com/cdn-cgi/trace | grep "warp=on"; then
-            echo "✅ WARP is ON and working!"
-          else
-            echo "⚠️ WARP connection failed. Logs:"
-            cat /var/log/warp.log
-          fi
+          echo "Testing WARP status..."
+          warp-cli --accept-tos status
+          curl -x socks5://127.0.0.1:40000 -s https://www.cloudflare.com/cdn-cgi/trace | grep "warp=" || true
 
       # 3. 安装 Firefox & GUI
       - name: Install Firefox & GUI
@@ -87,11 +81,10 @@ jobs:
           ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
           chmod -R 777 /opt/noVNC
 
-      # 4. 配置 Firefox (注入 Proxy 设置)
+      # 4. 配置用户与 Firefox Profile
       - name: Setup Firefox Profile
         run: |
           useradd -m -s /bin/bash appuser
-          
           su appuser -c "mkdir -p /home/appuser/Downloads"
           su appuser -c "mkdir -p /home/appuser/.mozilla/firefox/stealth.default"
           
@@ -106,26 +99,18 @@ jobs:
           Version=2
           EOF"
           
-          # 写入 user.js (包含 WARP 代理 + 自动下载 + 防检测)
           su appuser -c "cat <<EOF > /home/appuser/.mozilla/firefox/stealth.default/user.js
-          // === 网络加速 (WARP SOCKS5) ===
           user_pref(\"network.proxy.type\", 1);
           user_pref(\"network.proxy.socks\", \"127.0.0.1\");
           user_pref(\"network.proxy.socks_port\", 40000);
           user_pref(\"network.proxy.socks_version\", 5);
           user_pref(\"network.proxy.socks_remote_dns\", true);
-          
-          // === 反爬与伪装 ===
           user_pref(\"dom.webdriver.enabled\", false);
           user_pref(\"use_automation_extension\", false);
           user_pref(\"general.useragent.override\", \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0\");
-          
-          // === 允许广告 ===
           user_pref(\"privacy.trackingprotection.enabled\", false);
           user_pref(\"network.cookie.cookieBehavior\", 0);
           user_pref(\"dom.disable_open_during_load\", false);
-          
-          // === 自动下载 ===
           user_pref(\"browser.download.folderList\", 2);
           user_pref(\"browser.download.dir\", \"/home/appuser/Downloads\");
           user_pref(\"browser.download.useDownloadDir\", true);
@@ -136,7 +121,6 @@ jobs:
       - name: Start Desktop
         run: |
           service dbus start || true
-          
           cat <<EOF > /home/appuser/run_desktop.sh
           #!/bin/bash
           export DISPLAY=:99
@@ -147,11 +131,10 @@ jobs:
           x11vnc -display :99 -forever -passwd secret -bg -noxdamage
           /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
           EOF
-          
           chmod +x /home/appuser/run_desktop.sh
           su appuser -c "/home/appuser/run_desktop.sh"
 
-      # 6. 启动 Firefox & Tunnel
+      # 6. 启动 Firefox & 隧道
       - name: Launch Firefox
         run: |
           cat <<EOF > /home/appuser/run_firefox.sh
@@ -160,64 +143,47 @@ jobs:
           export HOME=/home/appuser
           nohup firefox --no-remote --new-instance "https://decrypt.day/app/id1489932710" > /home/appuser/firefox.log 2>&1 &
           EOF
-          
           chmod +x /home/appuser/run_firefox.sh
           su appuser -c "/home/appuser/run_firefox.sh"
           
           sleep 5
-          
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
-          
-          sleep 8
+          sleep 10
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
-          
           echo "=========================================================="
-          echo "🚀 WARP 加速模式已启动 (TOS Accepted)"
-          echo "🔗 VNC 链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
+          echo "🚀 WARP Accelerated Environment Ready"
+          echo "🔗 VNC: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
           echo "=========================================================="
 
-      # 7. 监控下载
-      - name: Monitor Download (Auto-Finish)
+      # 7. 智能监控下载 (自动退出)
+      - name: Monitor Download
         run: |
-          TARGET_DIR="/home/appuser/Downloads"
-          MAX_SIZE_MB=100
-          
-          echo "Starting monitoring..."
+          echo "Monitoring /home/appuser/Downloads for IPA..."
           while true; do
-            FILE=$(find "$TARGET_DIR" -name "*.ipa" -print -quit)
-            
+            FILE=$(find "/home/appuser/Downloads" -name "*.ipa" -print -quit)
             if [ -n "$FILE" ]; then
-              BASENAME=$(basename "$FILE")
               if [ -f "${FILE}.part" ] || [ -f "${FILE}.partjs" ]; then
-                 echo "⏳ Downloading $BASENAME..."
+                 echo "⏳ Downloading..."
               else
-                 SIZE_MB=$(du -m "$FILE" | cut -f1)
-                 if [ "$SIZE_MB" -ge "$MAX_SIZE_MB" ]; then
-                   echo "⚠️ File too large ($SIZE_MB MB). Waiting..."
+                 echo "✅ Found IPA. Checking integrity..."
+                 if zip -T "$FILE" > /dev/null 2>&1; then
+                   echo "🎉 Verified!"
+                   echo "IPA_FINAL_PATH=$FILE" >> $GITHUB_ENV
+                   break
                  else
-                   echo "✅ Found: $BASENAME ($SIZE_MB MB)"
-                   echo "🔍 Verifying zip integrity..."
-                   if zip -T "$FILE" > /dev/null 2>&1; then
-                     echo "🎉 Success! Verified."
-                     echo "FILE_PATH=$FILE" >> $GITHUB_ENV
-                     break
-                   else
-                     echo "❌ Integrity failed. Waiting..."
-                   fi
+                   echo "❌ Integrity failed, still waiting..."
                  fi
               fi
-            else
-               echo "Waiting for file..."
             fi
-            sleep 3
+            sleep 5
           done
 
-      # 8. 上传
-      - name: Upload IPA Artifact
+      # 8. 保存产物
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: decrypted-app
-          path: ${{ env.FILE_PATH }}
+          name: ios-ipa-package
+          path: ${{ env.IPA_FINAL_PATH }}
           retention-days: 1
