--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip procps
+          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip
           
           add-apt-repository -y ppa:mozillateam/ppa
           
@@ -61,18 +61,28 @@ jobs:
           
           # 核心修改：写入允许广告和追踪的 user.js
           su appuser -c "cat <<EOF > /home/appuser/.mozilla/firefox/stealth.default/user.js
+          // 1. 基础反爬 (保持不变)
           user_pref(\"dom.webdriver.enabled\", false);
           user_pref(\"use_automation_extension\", false);
           user_pref(\"general.useragent.override\", \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0\");
+          
+          // 2. 必须禁用的隐私保护 (修复 AdBlock 检测)
+          // 关闭增强跟踪保护
           user_pref(\"privacy.trackingprotection.enabled\", false);
           user_pref(\"privacy.trackingprotection.pbmode.enabled\", false);
           user_pref(\"privacy.trackingprotection.socialtracking.enabled\", false);
           user_pref(\"privacy.trackingprotection.cryptomining.enabled\", false);
           user_pref(\"privacy.trackingprotection.fingerprinting.enabled\", false);
-          user_pref(\"network.cookie.cookieBehavior\", 0);
+          
+          // 允许所有 Cookie (很多广告依赖第三方 Cookie)
+          user_pref(\"network.cookie.cookieBehavior\", 0); // 0 = Accept all
           user_pref(\"network.cookie.thirdparty.sessionOnly\", false);
+          
+          // 3. 其他可能触发检测的设置
           user_pref(\"dom.popup_allowed_events\", \"change click dblclick mouseup notificationclick reset submit touchend\"); 
-          user_pref(\"dom.disable_open_during_load\", false);
+          user_pref(\"dom.disable_open_during_load\", false); // 允许弹窗 (有些广告是弹窗)
+          
+          // 4. 保持 WebRTC 关闭 (防止 IP 泄露，如果广告一定需要 WebRTC 才能加载，这里可能需要改回 true)
           user_pref(\"media.peerconnection.enabled\", false);
           EOF"
 
@@ -96,70 +106,7 @@ jobs:
           su appuser -c "/home/appuser/run_desktop.sh"
           sleep 3
 
-      # 4. (新) 启动后台监控脚本
-      # 该步骤会启动一个后台进程，监控 Downloads 目录。
-      # 一旦发现有效的 IPA 文件，它会杀死下一步骤中的 tail 进程，从而允许 Workflow 继续。
-      - name: Start Background Monitor
-        run: |
-          # 将当前 GITHUB_ENV 的路径保存，以便脚本写入环境变量
-          ENV_FILE="$GITHUB_ENV"
-          
-          cat <<EOF > /home/appuser/monitor_download.sh
-          #!/bin/bash
-          TARGET_DIR="/home/appuser/Downloads"
-          MAX_SIZE_MB=100
-          
-          echo "Starting background monitoring for *.ipa in \$TARGET_DIR..."
-          
-          while true; do
-            # 查找 ipa 文件
-            FILE=\$(find "\$TARGET_DIR" -name "*.ipa" -print -quit)
-            
-            if [ -n "\$FILE" ]; then
-              BASENAME=\$(basename "\$FILE")
-              
-              # 1. 检查是否还在下载
-              if [ -f "\${FILE}.part" ] || [ -f "\${FILE}.partjs" ]; then
-                 echo "⏳ File \$BASENAME is still downloading..."
-              else
-                 # 2. 检查大小
-                 SIZE_MB=\$(du -m "\$FILE" | cut -f1)
-                 
-                 if [ "\$SIZE_MB" -ge "\$MAX_SIZE_MB" ]; then
-                   echo "⚠️ Found \$BASENAME but size (\$SIZE_MB MB) is too large. Waiting..."
-                 else
-                   echo "✅ Found candidate: \$BASENAME (\$SIZE_MB MB)"
-                   
-                   # 3. 检查完整性
-                   if zip -T "\$FILE" > /dev/null 2>&1; then
-                     echo "🎉 Integrity Check PASSED! Killing Firefox wait loop..."
-                     
-                     # 写入环境变量供后续步骤使用（如果需要）
-                     echo "FILE_PATH=\$FILE" >> "$ENV_FILE"
-                     
-                     # --- 核心逻辑：杀死保持 Firefox 步骤运行的 tail 进程 ---
-                     # 查找运行 'tail -f ... firefox.log' 的进程并结束它
-                     pkill -f "tail -f /home/appuser/firefox.log"
-                     
-                     exit 0
-                   else
-                     echo "❌ Integrity Check FAILED. Waiting..."
-                   fi
-                 fi
-              fi
-            fi
-            sleep 3
-          done
-          EOF
-          
-          chmod +x /home/appuser/monitor_download.sh
-          # 在后台运行监控脚本，并将日志输出到 monitor.log
-          nohup /home/appuser/monitor_download.sh > /home/appuser/monitor.log 2>&1 &
-          
-          echo "Background monitor started."
-
-      # 5. (新) 启动 Firefox 并保持会话
-      # 这里会一直运行，直到被上一步的后台脚本“杀掉”
+      # 4. 启动 Firefox
       - name: Launch Firefox & Tunnel
         run: |
           cat <<EOF > /home/appuser/run_firefox.sh
@@ -188,18 +135,60 @@ jobs:
           echo "=========================================================="
           echo "🦊 Firefox (Ad-Friendly Mode) 已启动"
           echo "🔗 VNC 链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
-          echo "⏳ 等待用户下载完成 (后台监控脚本运行中)..."
           echo "=========================================================="
           
-          # 阻塞在此处，直到后台监控脚本执行 pkill 命令
-          # 添加 || true 确保被 kill 后不报错退出
-          tail -f /home/appuser/firefox.log || true
+          # tail -f /home/appuser/firefox.log
+    
+      # 5. 核心步骤：监控下载并校验
+      - name: Monitor Download (Wait for IPA)
+        run: |
+          TARGET_DIR="/home/appuser/Downloads"
+          MAX_SIZE_MB=100
           
-          echo "🛑 Session ended by monitor script (Download detected)."
+          echo "Starting monitoring loop for *.ipa in $TARGET_DIR"
+          
+          while true; do
+            # 查找 ipa 文件 (不包含 .part 临时文件)
+            FILE=$(find "$TARGET_DIR" -name "*.ipa" -print -quit)
+            
+            if [ -n "$FILE" ]; then
+              BASENAME=$(basename "$FILE")
+              
+              # 1. 检查是否还在下载 (Firefox 通常会生成 .part)
+              if [ -f "${FILE}.part" ] || [ -f "${FILE}.partjs" ]; then
+                 echo "⏳ File $BASENAME is still downloading..."
+              else
+                 # 2. 检查大小
+                 SIZE_MB=$(du -m "$FILE" | cut -f1)
+                 
+                 if [ "$SIZE_MB" -ge "$MAX_SIZE_MB" ]; then
+                   echo "⚠️ Found $BASENAME but size ($SIZE_MB MB) is too large (> $MAX_SIZE_MB MB). Waiting for correct file..."
+                 else
+                   echo "✅ Found candidate: $BASENAME ($SIZE_MB MB)"
+                   
+                   # 3. 检查完整性 (使用 zip -T)
+                   echo "🔍 Verifying integrity..."
+                   if zip -T "$FILE" > /dev/null 2>&1; then
+                     echo "🎉 Integrity Check PASSED!"
+                     echo "FILE_PATH=$FILE" >> $GITHUB_ENV
+                     break
+                   else
+                     echo "❌ Integrity Check FAILED. The file might be incomplete or corrupted. Waiting..."
+                   fi
+                 fi
+              fi
+            else
+               # 没有任何文件时，仅打印心跳
+               echo "Waiting for user to download IPA..."
+            fi
+            
+            sleep 3
+          done
+          
+          echo "Download complete and verified. Stopping session."
 
       # 6. 上传产物
       - name: Upload IPA Artifact
         uses: actions/upload-artifact@v4
         with:
           name: decrypted-app
-          path: /home/appuser/Downloads/*.ipa
